[tool.poetry]
name = "practice-rl"
version = "0.1.0"
description = ""
authors = ["vtamprateep <vtamprateep@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
lefthook = "^1.9.2"
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
